src/pages/stats/AgentsTable.less
@import (reference) '~css/typography.less';
@import (reference) '~@gorgias/design-tokens/dist/css/layout.less';

:local {
    .wrapper {
        display: grid;
    }

    .container {
        width: 100%;
        max-height: calc(100vh - 200px);
        overflow: auto;
        margin-bottom: @layout-spacing-m;
    }

    .table {
        box-sizing: border-box;
        margin-bottom: @layout-spacing-xs;

        .header,
        thead {
            .sticky,
            th,
            td {
                position: sticky;
                top: 0;
                height: 56px;
                z-index: 3;
                background-color: var(--neutral-grey-0);
                cursor: pointer;
            }

            &:first-child {
                td:first-child {
                    z-index: 4;
                }
            }
        }

        tbody {
            tr {
                td,
                div {
                    cursor: text;
                }
            }
        }

        tr {
            height: 56px;

            td {
                &.withShadow {
                    &:after {
                        content: '';
                        position: absolute;
                        top: 0;
                        right: 0;
                        bottom: -1px;
                        width: 30px;
                        box-shadow: inset 10px 0 8px -8px rgba(0, 0, 0, 0.15);

                        transform: translateX(100%);
                        pointer-events: none;
                    }
                }

                &.sticky,
                &:first-child {
                    position: sticky;
                    left: 0;
                    z-index: 2;
                    background-color: var(--neutral-grey-0);
                }

                &.highlight {
                    &:first-child {
                        background-color: var(--neutral-grey-1);
                        font-weight: @body-medium-font-weight;
                    }
                }
            }
        }

        &.compact {
            tr {
                height: 32px;
            }

            .header,
            thead,
            tr {
                .sticky,
                th,
                td {
                    height: 32px;
                    padding: @layout-spacing-xxs;
                }
            }
        }
    }

    .BodyCell,
    .BodyCellContent {
        cursor: auto;
        overflow: hidden;
    }

    .emptyValue {
        color: var(--neutral-grey-3);
    }

    .pagination {
        margin-top: @layout-spacing-xs;
        margin-left: @layout-spacing-xs;
        margin-bottom: @layout-spacing-xs;
    }
}

